<resources>
    <string name="app_name">W3W</string>
    <string name="action_settings">Settings</string>

    <string name="get_long">Longitude</string>
    <string name="get_lat">Latitude</string>
    <string name="convert_to_w3w">Convert to What3Word</string>
    <string name="convert_to_w3w_text">your 3 Words address</string>
    <string name="gps_network_not_enabled">GPS not enable</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="StreetMapMenu">Streets</string>
    <string name="TopoMenu">Topographic</string>
    <string name="GrayMenu">Gray</string>
    <string name="OceanMenu">Oceans</string>
</resources>
